// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linked key 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx._resolveMsg(\\"name\\")(ctx), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`linked list 1`] = `
"function __msg__ (ctx) {
  const interpolate = val => { return val == null ? \\"\\" : Array.isArray(val) || ((Object.prototype.toString.call(val) === \\"[object Object]\\") && val.toString === Object.prototype.toString) ? JSON.stringify(val, null, 2) : String(val) }
  return [
    \\"hi \\", ctx._resolveMsg(interpolate(ctx.list[0]))(ctx), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`linked modifier 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx._resolveModifier(\\"upper\\")(ctx._resolveMsg(\\"name\\")(ctx)), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`linked named 1`] = `
"function __msg__ (ctx) {
  const interpolate = val => { return val == null ? \\"\\" : Array.isArray(val) || ((Object.prototype.toString.call(val) === \\"[object Object]\\") && val.toString === Object.prototype.toString) ? JSON.stringify(val, null, 2) : String(val) }
  return [
    \\"hi \\", ctx._resolveMsg(interpolate(ctx.named.name))(ctx), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`list basic 1`] = `
"function __msg__ (ctx) {
  const interpolate = val => { return val == null ? \\"\\" : Array.isArray(val) || ((Object.prototype.toString.call(val) === \\"[object Object]\\") && val.toString === Object.prototype.toString) ? JSON.stringify(val, null, 2) : String(val) }
  return [
    \\"hi \\", interpolate(ctx.list[0]), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`list multiple 1`] = `
"function __msg__ (ctx) {
  const interpolate = val => { return val == null ? \\"\\" : Array.isArray(val) || ((Object.prototype.toString.call(val) === \\"[object Object]\\") && val.toString === Object.prototype.toString) ? JSON.stringify(val, null, 2) : String(val) }
  return [
    interpolate(ctx.list[0]), \\" \\", interpolate(ctx.list[1]), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`named basic 1`] = `
"function __msg__ (ctx) {
  const interpolate = val => { return val == null ? \\"\\" : Array.isArray(val) || ((Object.prototype.toString.call(val) === \\"[object Object]\\") && val.toString === Object.prototype.toString) ? JSON.stringify(val, null, 2) : String(val) }
  return [
    \\"hi \\", interpolate(ctx.named.name), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`named multiple 1`] = `
"function __msg__ (ctx) {
  const interpolate = val => { return val == null ? \\"\\" : Array.isArray(val) || ((Object.prototype.toString.call(val) === \\"[object Object]\\") && val.toString === Object.prototype.toString) ? JSON.stringify(val, null, 2) : String(val) }
  return [
    interpolate(ctx.named.greeting), \\" \\", interpolate(ctx.named.name), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`plural 1`] = `
"function __msg__ (ctx) {
  return [
    \\"no apples\\", \\"one apple\\", \\"too much apples  \\", \\"\\"
  ][ctx.plural.rule(ctx.plural.index, 3)]
}"
`;

exports[`text basic 1`] = `
"function __msg__ (ctx) {
  return \\"hello world\\"
}"
`;

exports[`text multline 1`] = `
"function __msg__ (ctx) {
  return \\"hello\\\\n world\\"
}"
`;
